--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,21 +1,19 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro Basics</title>
+  </head>
+  <body>
+    <nav>
       <a href="#">Home</a>
       <a href="about.html">About</a>
       <a href="#">Contact</a>
-
       <img id="icon" src="https://placehold.co/50x50" alt="" />
     </nav>
-
     <section id="card-section">
       <div class="container">
         <div id="title-card-list">
@@ -177,169 +175,170 @@
       </div>
       <div id="img-section">
         <img src="https://placehold.co/50x50" alt="" />
+        <img src="https://placehold.co/50x50" alt="" />
+        <img src="https://placehold.co/50x50" alt="" />
       </div>
     </footer>
-	</body>
+  </body>
 </html>
 
 <style>
-	      * {
-        box-sizing: border-box;
-        margin: 0;
-      }
-      .container {
-        max-width: 1200px;
-        margin: 0 auto;
-      }
+  * {
+    box-sizing: border-box;
+    margin: 0;
+  }
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
 
-      @media (max-width: 768px) {
-        nav {
-          flex-direction: column;
+  @media (max-width: 768px) {
+    nav {
+      flex-direction: column;
 
-          a {
-            text-align: center;
-          }
-
-          #icon {
-            display: none;
-          }
-        }
-
-        #info-grid {
-          grid-template-columns: 1fr !important;
-        }
-      }
-
-      /* -----------navbar------------- */
-      nav {
-        display: flex;
-        /* position: fixed; */
-        /* gap: 1rem; */
-        width: 100%;
-        /* height: 50px; */
-        background-color: black;
-        padding: 0;
-        margin: 0;
-        align-items: stretch;
-        /* justify-items: center; */
-        padding-left: 30px;
-        a {
-          display: block;
-          padding: 10px;
-          /* border: 1px solid red; */
-          text-decoration: none;
-          color: white;
-        }
-        #icon {
-          margin-left: auto;
-          padding: 0 !important;
-        }
-        a:hover {
-          background-color: orange;
-          transform: scale(1.2, 1.2);
-        }
-      }
-      /* -----------navbar------------- */
-
-      /* -----------body--------------- */
-
-      /* ------------------------------ */
-      #card-section .container {
-        background-color: gray;
-        height: 500px;
-        padding: 10px;
-      }
-
-      #card-list {
-        display: flex;
-        gap: 1em;
-        align-items: center;
-        overflow-x: auto;
-      }
-      #card {
-        min-width: 250px;
-        height: 400px;
-        background-color: white;
-        border-radius: 10px;
-        display: flex;
-        flex-direction: column;
-        padding: 10px;
-        gap: 1em;
-
-        img {
-          border-radius: 10px;
-        }
-      }
-      #title-card-list {
-        font-size: 2em;
-        font-weight: border;
-        color: white;
-        margin-bottom: 10px;
-      }
-      /* ------------------------------ */
-
-      /* ------------------------------ */
-      #picture-box {
-        display: flex;
-        flex-direction: column;
-        padding: 20px;
-        gap: 1em;
-
-        #img-sec {
-          img {
-            max-width: 100%;
-          }
-          display: flex;
-          justify-content: center;
-        }
-        p {
-          text-align: center;
-        }
-      }
-      /* ------------------------------ */
-
-      /* ------------------------------ */
-
-      #info-grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        place-items: center;
-
-        img {
-          max-width: 100%;
-        }
-      }
-      #grid-item {
-        padding: 10px;
+      a {
         text-align: center;
       }
 
-      /* ------------------------------ */
-
-      /* -----------body--------------- */
-
-      /* -----------footer--------------- */
-
-      footer {
-        display: flex;
-        background-color: black;
-        align-items: center;
-        height: 100px;
-        gap: 1em;
-        padding-left: 10px;
-
-        #img-section {
-          margin-left: auto;
-          padding-right: 10px;
-        }
-        #links {
-          display: flex;
-          gap: 1em;
-          a {
-            text-decoration: none;
-            list-style: none;
-            color: white;
-          }
-        }
+      #icon {
+        display: none;
       }
+    }
+
+    #info-grid {
+      grid-template-columns: 1fr !important;
+    }
+  }
+
+  /* -----------navbar------------- */
+  nav {
+    display: flex;
+    width: 100%;
+    height: 100px;
+    background-color: black;
+    padding: 0;
+    margin: 0;
+    align-items: stretch;
+    /* justify-items: center; */
+    padding-left: 30px;
+    a {
+      display: flex;
+      align-items: center;
+      padding: 10px;
+      text-decoration: none;
+      color: white;
+    }
+    #icon {
+      margin-left: auto;
+      padding: 10px !important;
+
+    }
+    a:hover {
+      background-color: orange;
+      transform: scale(1.2, 1.2);
+    }
+  }
+  /* -----------navbar------------- */
+
+  /* -----------body--------------- */
+
+  /* ------------------------------ */
+  #card-section .container {
+    background-color: gray;
+    height: 500px;
+    padding: 10px;
+  }
+
+  #card-list {
+    display: flex;
+    gap: 1em;
+    align-items: center;
+    overflow-x: auto;
+  }
+  #card {
+    min-width: 250px;
+    height: 400px;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 1em;
+
+    img {
+      border-radius: 10px;
+    }
+  }
+  #title-card-list {
+    font-size: 2em;
+    font-weight: border;
+    color: white;
+    margin-bottom: 10px;
+  }
+  /* ------------------------------ */
+
+  /* ------------------------------ */
+  #picture-box {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 1em;
+
+    #img-sec {
+      img {
+        max-width: 100%;
+      }
+      display: flex;
+      justify-content: center;
+    }
+    p {
+      text-align: center;
+    }
+  }
+  /* ------------------------------ */
+
+  /* ------------------------------ */
+
+  #info-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+
+    img {
+      max-width: 100%;
+    }
+  }
+  #grid-item {
+    padding: 10px;
+    text-align: center;
+  }
+
+  /* ------------------------------ */
+
+  /* -----------body--------------- */
+
+  /* -----------footer--------------- */
+
+  footer {
+    display: flex;
+    background-color: black;
+    align-items: center;
+    height: 100px;
+    gap: 1em;
+    padding-left: 10px;
+
+    #img-section {
+      margin-left: auto;
+      padding-right: 10px;
+    }
+    #links {
+      display: flex;
+      gap: 1em;
+      a {
+        text-decoration: none;
+        list-style: none;
+        color: white;
+      }
+    }
+  }
 </style>
