--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -146,20 +146,20 @@
             incidunt suscipit.
           </p>
         </div>
+        <hr>
       </div>
     </section>
+    
 
     <section id="info-section">
       <div class="container">
         <div id="info-grid">
           <img id="grid-item" src="https://placehold.co/400x400" alt="" />
           <p id="grid-item">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
-            dolorum?
+            YOUR STYLE
           </p>
           <p id="grid-item">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde,
-            obcaecati.
+            SHOP NOW
           </p>
           <img id="grid-item" src="https://placehold.co/400x400" alt="" />
         </div>
@@ -219,13 +219,14 @@
     padding: 0;
     margin: 0;
     align-items: stretch;
-    /* justify-items: center; */
     padding-left: 30px;
     a {
       display: flex;
+      width: 6rem;
       align-items: center;
-      padding: 10px;
+      justify-content: center;
       text-decoration: none;
+      border: 1px solid red;
       color: white;
     }
     #icon {
@@ -246,7 +247,8 @@
   #card-section .container {
     background-color: gray;
     height: 500px;
-    padding: 10px;
+    padding: 20px;
+
   }
 
   #card-list {
@@ -311,6 +313,9 @@
   #grid-item {
     padding: 10px;
     text-align: center;
+
+    font-size:x-large;
+    font-weight: bolder;
   }
 
   /* ------------------------------ */
@@ -334,6 +339,7 @@
     #links {
       display: flex;
       gap: 1em;
+      margin-left: 1em;
       a {
         text-decoration: none;
         list-style: none;
