--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -194,9 +194,13 @@
 
   @media (max-width: 768px) {
     nav {
+      padding: 0 !important;
       flex-direction: column;
-
+      /* align-content: stretch; */
+      justify-items: stretch;
       a {
+        display: block;
+        padding: 1em !important;
         text-align: center;
       }
 
@@ -208,13 +212,16 @@
     #info-grid {
       grid-template-columns: 1fr !important;
     }
+
+    #links{
+      flex-direction: column;
+    }
   }
 
   /* -----------navbar------------- */
   nav {
     display: flex;
     width: 100%;
-    height: 100px;
     background-color: black;
     padding: 0;
     margin: 0;
@@ -222,7 +229,7 @@
     padding-left: 30px;
     a {
       display: flex;
-      width: 6rem;
+      padding: 2rem;
       align-items: center;
       justify-content: center;
       text-decoration: none;
@@ -328,7 +335,8 @@
     display: flex;
     background-color: black;
     align-items: center;
-    height: 100px;
+    /* height: 100px; */
+    padding: 1em;
     gap: 1em;
     padding-left: 10px;
 
@@ -345,6 +353,10 @@
         list-style: none;
         color: white;
       }
+    }
+    #img-section {
+      display: flex;
+      gap: 1em;
     }
   }
 </style>
