--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,166 +20,147 @@
           <p>OUR PRODUCT</p>
         </div>
         <div id="card-list">
-          <div id="card">
-            <img src="https://placehold.co/150x150" alt="" />
-            <div id="detail">
-              <h4>Item1</h4>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Eligendi, ad!
-              </p>
+          <a href="#">
+            <div id="card">
+              <img src="https://placehold.co/150x150" alt="" />
+              <div id="detail">
+                <h4>Item1</h4>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Eligendi, ad!
+                </p>
+              </div>
             </div>
-          </div>
-          <div id="card">
-            <img src="https://placehold.co/150x150" alt="" />
-            <div id="detail">
-              <h4>Item1</h4>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Eligendi, ad!
-              </p>
+          </a>
+          <a href="#">
+            <div id="card">
+              <img src="https://placehold.co/150x150" alt="" />
+              <div id="detail">
+                <h4>Item1</h4>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Eligendi, ad!
+                </p>
+              </div>
             </div>
-          </div>
-          <div id="card">
-            <img src="https://placehold.co/150x150" alt="" />
-            <div id="detail">
-              <h4>Item1</h4>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Eligendi, ad!
-              </p>
+          </a>
+          <a href="#">
+            <div id="card">
+              <img src="https://placehold.co/150x150" alt="" />
+              <div id="detail">
+                <h4>Item1</h4>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Eligendi, ad!
+                </p>
+              </div>
             </div>
-          </div>
-          <div id="card">
-            <img src="https://placehold.co/150x150" alt="" />
-            <div id="detail">
-              <h4>Item1</h4>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Eligendi, ad!
-              </p>
+          </a>
+          <a href="#">
+            <div id="card">
+              <img src="https://placehold.co/150x150" alt="" />
+              <div id="detail">
+                <h4>Item1</h4>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Eligendi, ad!
+                </p>
+              </div>
             </div>
-          </div>
-          <div id="card">
-            <img src="https://placehold.co/150x150" alt="" />
-            <div id="detail">
-              <h4>Item1</h4>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Eligendi, ad!
-              </p>
+          </a>
+          <a href="#">
+            <div id="card">
+              <img src="https://placehold.co/150x150" alt="" />
+              <div id="detail">
+                <h4>Item1</h4>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Eligendi, ad!
+                </p>
+              </div>
             </div>
-          </div>
-          <div id="card">
-            <img src="https://placehold.co/150x150" alt="" />
-            <div id="detail">
-              <h4>Item1</h4>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Eligendi, ad!
-              </p>
+          </a>
+          <a href="#">
+            <div id="card">
+              <img src="https://placehold.co/150x150" alt="" />
+              <div id="detail">
+                <h4>Item1</h4>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Eligendi, ad!
+                </p>
+              </div>
             </div>
-          </div>
-          <div id="card">
-            <img src="https://placehold.co/150x150" alt="" />
-            <div id="detail">
-              <h4>Item1</h4>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Eligendi, ad!
-              </p>
+          </a>
+          <a href="#">
+            <div id="card">
+              <img src="https://placehold.co/150x150" alt="" />
+              <div id="detail">
+                <h4>Item1</h4>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Eligendi, ad!
+                </p>
+              </div>
             </div>
-          </div>
-          <div id="card">
-            <img src="https://placehold.co/150x150" alt="" />
-            <div id="detail">
-              <h4>Item1</h4>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Eligendi, ad!
-              </p>
+          </a>
+          <a href="#">
+            <div id="card">
+              <img src="https://placehold.co/150x150" alt="" />
+              <div id="detail">
+                <h4>Item1</h4>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Eligendi, ad!
+                </p>
+              </div>
             </div>
-          </div>
-          <div id="card">
-            <img src="https://placehold.co/150x150" alt="" />
-            <div id="detail">
-              <h4>Item1</h4>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Eligendi, ad!
-              </p>
-            </div>
-          </div>
-          <div id="card">
-            <img src="https://placehold.co/150x150" alt="" />
-            <div id="detail">
-              <h4>Item1</h4>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Eligendi, ad!
-              </p>
-            </div>
-          </div>
-          <div id="card">
-            <img src="https://placehold.co/150x150" alt="" />
-            <div id="detail">
-              <h4>Item1</h4>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Eligendi, ad!
-              </p>
-            </div>
-          </div>
+          </a>
         </div>
       </div>
     </section>
-
-    <section id="picture-section">
-      <div class="container">
-        <div id="picture-box">
-          <div id="img-sec">
-            <img src="https://placehold.co/500x500" alt="" />
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
-            tenetur qui atque aperiam quod provident harum nulla molestiae
-            incidunt suscipit.
-          </p>
-        </div>
-        <hr>
-      </div>
-    </section>
-    
-
-    <section id="info-section">
-      <div class="container">
-        <div id="info-grid">
-          <img id="grid-item" src="https://placehold.co/400x400" alt="" />
-          <p id="grid-item">
-            YOUR STYLE
-          </p>
-          <p id="grid-item">
-            SHOP NOW
-          </p>
-          <img id="grid-item" src="https://placehold.co/400x400" alt="" />
-        </div>
-      </div>
-    </section>
-
-    <footer>
-      <div id="links">
-        <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">Contact</a>
-        <a href="">Other</a>
-      </div>
-      <div id="img-section">
-        <img src="https://placehold.co/50x50" alt="" />
-        <img src="https://placehold.co/50x50" alt="" />
-        <img src="https://placehold.co/50x50" alt="" />
-      </div>
-    </footer>
   </body>
+
+  <section id="picture-section">
+    <div class="container">
+      <div id="picture-box">
+        <div id="img-sec">
+          <img src="https://placehold.co/500x500" alt="" />
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+          tenetur qui atque aperiam quod provident harum nulla molestiae
+          incidunt suscipit.
+        </p>
+      </div>
+      <hr />
+    </div>
+  </section>
+
+  <section id="info-section">
+    <div class="container">
+      <div id="info-grid">
+        <img id="grid-item" src="https://placehold.co/400x400" alt="" />
+        <p id="grid-item">YOUR STYLE</p>
+        <p id="grid-item">SHOP NOW</p>
+        <img id="grid-item" src="https://placehold.co/400x400" alt="" />
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div id="links">
+      <a href="">Home</a>
+      <a href="">About</a>
+      <a href="">Contact</a>
+      <a href="">Other</a>
+    </div>
+    <div id="img-section">
+      <img src="https://placehold.co/50x50" alt="" />
+      <img src="https://placehold.co/50x50" alt="" />
+      <img src="https://placehold.co/50x50" alt="" />
+    </div>
+  </footer>
 </html>
 
 <style>
@@ -211,9 +192,10 @@
 
     #info-grid {
       grid-template-columns: 1fr !important;
+      gap: 1em;
     }
 
-    #links{
+    #links {
       flex-direction: column;
     }
   }
@@ -238,7 +220,6 @@
     #icon {
       margin-left: auto;
       padding: 10px !important;
-
     }
     a:hover {
       background-color: orange;
@@ -254,7 +235,6 @@
     background-color: gray;
     height: 500px;
     padding: 20px;
-
   }
 
   #card-list {
@@ -262,8 +242,13 @@
     gap: 1em;
     align-items: center;
     overflow-x: auto;
+
+    a{
+      text-decoration: none;
+      color: black;
+    }
   }
-  #card {
+  a #card {
     min-width: 250px;
     height: 400px;
     background-color: white;
@@ -317,10 +302,10 @@
     }
   }
   #grid-item {
-    padding: 10px;
-    text-align: center;
-
-    font-size:x-large;
+    /* padding: 10px; */
+    /* text-align: center; */
+    font-family: sans-serif;
+    font-size: 50px;
     font-weight: bolder;
   }
 
